# compressr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: frequency_counter.hpp  huffman_codec.hpp  huffman_tree.hpp
src/: CMakeLists.txt  bit_stream.cpp  bit_stream.hpp  file_compressor.cpp  file_compressor.hpp  frequency_counter.cpp  huffman_codec.cpp  huffman_codec.hpp  huffman_tree.cpp  main.cpp
tests/: CMakeLists.txt  file_compressor_test.cpp  frequency_counter_test.cpp  huffman_codec_test.cpp  huffman_tree_test.cpp  test_input.txt
